# rust-graphql

./: .env  Cargo.toml  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: db.rs  lib.rs
entity/: Cargo.toml
entity/src/: bakery.rs  chef.rs  lib.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20221025_000001_create_bakery_table.rs  m20221025_000002_create_chef_table.rs  main.rs
schema/: Cargo.toml
schema/src/: query.rs
src/: main.rs
src/entities/: bakery.rs  chef.rs  mod.rs  prelude.rs
src/migrator/: m20221026_000001_create_bakery_table.rs  m20221026_000002_create_chef_table.rs  mod.rs
