[package]
edition = "2021"
name = "rust-graphql"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = {path = "./api"}
async-graphql = "5.0.5"
dotenvy = "0.15.6"
futures = "0.3.25"
migration = {path = "./migration"}
salvo = {version = "0.37.9", features = ["logging"]}
sea-orm-migration = "0.10.0"
tokio = {version = "1.24.1", features = ["macros"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[workspace]
members = [
  "api",
  "entity",
  "migration",
]

[workspace.dependencies]
async-graphql = "5.0.5"
dotenvy = "0.15.6"
sea-orm = {version = "0.10.0", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros"]}
